[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autocombobox"
authors = [
    {name="Matteo Chiesa", email="matteo.chiesa.mc@gmail.com"}
]
description = "Insert a Combobox into your GUI that allows suggestions based on what the user writes in"
version = "1.1.1"
keywords = ["autocombobox", "combobox", "autocompleting", "autocomplete"]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/Church-17/autocombobox"
